--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@ li {
     margin-bottom: 2rem;
 }
 
-.form {
+.input-wrapper {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
